@@ -80,7 +80,7 @@
 
 <ng-template #noAuthorization>
     <div class="h5 text-muted text-center font-weight-light" style="padding-top: 10vh; padding-bottom: 10vh">
-        No Authorization
+        You are not authorized to view the page.
     </div>
   </ng-template>
 
